# traceable-llm-reasoning

./: .env.example  .gitignore  README.md  pyproject.toml
apps/streamlit/: app.py
experiments/configs/: default.json
scripts/: render_summary_svg.py
tests/: test_phase2_reasoning.py  test_smoke.py  test_streamlit_smoke.py
traceable_llm_reasoning/: __init__.py  cli.py  paths.py
traceable_llm_reasoning/benchmarks/: __init__.py
traceable_llm_reasoning/benchmarks/recipes/: __init__.py  benchmark.py  knowledge.py  loaders.py  metrics.py  models.py  operators.py  retrieval.py  verification.py
traceable_llm_reasoning/benchmarks/recipes/fixtures/: cases.json  tasks.json
traceable_llm_reasoning/providers/: __init__.py  base.py  mock.py  ollama.py  openai_compatible.py  prompting.py
traceable_llm_reasoning/reasoning/: __init__.py  critic.py  executor.py  pipeline.py  planner.py  proposer.py  types.py
