[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceable-llm-reasoning"
version = "0.1.0"
description = "Traceable LLM reasoning with retrieval, planning, explicit actions, and verification."
requires-python = ">=3.10"

[project.scripts]
traceable-llm-reasoning = "traceable_llm_reasoning.cli:main"

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
dev = ["playwright>=1.52"]

[tool.setuptools.packages.find]
include = ["traceable_llm_reasoning*"]
